--- a/index.html
+++ b/index.html
@@ -36,5 +36,5 @@
 </body>
 </html>
 
-<!--This was stolen from Nathan Taylor: @nathantokyo (https://codepen.io/nathantaylor/pen/PJGqdE)-->
+<!--This was stolen from Nathan Taylor: @nathantokyo (https://nathan.tokyo)-->
 <!--All images were taken by me-->
