--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
-  <meta charset="UTF-8">
-  <title>Ryan Howarth</title>
-  <meta name="description" content="The home of Ryan">
-  <meta name="author" content="Ryan Howarth">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+	<meta charset="UTF-8">
+	<title>Ryan Howarth</title>
+	<meta name="description" content="The home of Ryan">
+	<meta name="author" content="Ryan Howarth">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Hind:300,400,700|Roboto+Mono:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 	<link rel="stylesheet" href="./style.css">
