--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<span>Howarth<br></span>
 		<a class="button" href="https://github.com/Sir-Ryan" target="/black"><span class="fab fa-github" style="font-size: 2em;"></span></a>
 		<a class="button" href="mailto:ryan@ryanhowarth.net" target="/black"><span class="far fa-envelope" style="font-size: 2em;"></span></a>
+		<a class="button" href="https://psych.ryanhowarth.net" target=""><span class="fas fa-brain" style="font-size: 2em;"></span></a>
 	</div>
 <div class="untitled">
 	<div class="untitled__slides">
